fix: show project name in file tree root